@@ -1,4 +1,4 @@
-2008-03-26  Don Scorgie  <dscorgie@svn.gnome.org>
+2008-03-26  Don Scorgie  <Don@Scorgie.org>
 
 	* LINGUAS: 
 	* fa.po:
